WORK IN PROGRESS. Product page layout is fucked in this version. Fix for "Product toegevoegd aan winkelmandje!" message making button and price jump up.

--- a/custom.css
+++ b/custom.css
@@ -89,3 +89,7 @@
     margin-top: 20px;
 
 }
+/* Saves a space under add to cart button for message "added product to cart" */
+.message { 
+    min-height: 40px;
+}
